@@ -1,3 +1,12 @@
+2006-01-03  Srinivasa Ragavan  <sragavan@novell.com>
+
+	** Fix for bug #325416
+	
+	* gui/e-day-view.c: (e_day_view_convert_event_coords),
+	(tooltip_get_view_event), (tooltip_destroy),
+	(e_day_view_on_text_item_event): Read the event num from the position
+	of x,y.
+
 2006-01-02  Srinivasa Ragavan  <sragavan@novell.com>
 
 	** Fix for bug #325414
